# vvmake

./: .gitignore  README.md  install.bat  setup.py  upload.bat  vvmake.py
testproject/: CMakeLists.txt  Export.h  foo.cpp  foo.h  main.cpp  vvmake_config.py
vvmake/: test.py  vv.py  vvmake.py
vvmakelib/: __init__.py
